--- a/rootdir/etc/init.juice.rc
+++ b/rootdir/etc/init.juice.rc
@@ -2,3 +2,13 @@ on boot
     # Touchpanel
     chown system system /sys/touchpanel/double_tap
     chmod 0664 /sys/touchpanel/double_tap
+
+    # Adaptive Charging
+    chown system system /sys/class/power_supply/battery/input_suspend
+    chmod 0666 /sys/class/power_supply/battery/input_suspend
+
+on property:sys.boot_completed=1
+    # Restrict permissions to socket file
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
+
